# aoc

./: .gitignore  CMakeLists.txt  README.md  aoc.c  aoc.cpp  aoc.h
2017/: CMakeLists.txt  day_01.c  day_02.c  day_03.c  day_04.cpp  day_05.cpp  day_06.cpp
2019/: CMakeLists.txt  day_01.c  day_02.c  day_03.c  day_04.c  day_05.c  day_06.c  day_07.c  day_08.c  day_09.c  day_10.c  day_11.c  day_12.c  day_13.c  day_14.c  day_15.c  intcode.c  intcode.h  shared_advent.c  shared_advent.h
2020/: CMakeLists.txt  day_01.c  day_17.c
2021/: CMakeLists.txt  day_01.c  day_02.c  day_03.c  day_04.c  day_05.c  day_06.c  day_07.c  day_08.c  day_09.c  day_10.c  day_11.c  day_12.c  day_12.cpp  day_13.c  day_14.c  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp
2022/: CMakeLists.txt  day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.c
2023/: CMakeLists.txt  day_01.c  day_02.c  day_03.c  day_04.c  day_05.c  day_06.c  day_07.c  day_08.c  day_09.c  day_10.c  day_11.c  day_11.cpp  day_12.cpp  day_13.cpp  day_15.cpp  day_16.cpp  day_18.cpp  day_19.cpp
2024/: CMakeLists.txt  day_01.cpp
