add_executable(aoc_2022_01 day_01.cpp)
target_link_libraries(aoc_2022_01 PRIVATE aoc_lib)

add_executable(aoc_2022_02 day_02.cpp)
target_link_libraries(aoc_2022_02 PRIVATE aoc_lib)

add_executable(aoc_2022_03 day_03.cpp)
target_link_libraries(aoc_2022_03 PRIVATE aoc_lib)

add_executable(aoc_2022_04 day_04.cpp)
target_link_libraries(aoc_2022_04 PRIVATE aoc_lib)