add_executable(aoc_2023_01 day_01.c)
add_executable(aoc_2023_02 day_02.c)
add_executable(aoc_2023_03 day_03.c)
add_executable(aoc_2023_04 day_04.c)
add_executable(aoc_2023_05 day_05.c)
add_executable(aoc_2023_06 day_06.c)
add_executable(aoc_2023_07 day_07.c)
add_executable(aoc_2023_08 day_08.c)
add_executable(aoc_2023_09 day_09.c)
add_executable(aoc_2023_10 day_10.c)
add_executable(aoc_2023_11 day_11.cpp)
add_executable(aoc_2023_12 day_12.cpp)
add_executable(aoc_2023_13 day_13.cpp)